@@ -1,0 +1,8 @@
+CORE
+multiple_init.sv
+
+^EXIT=0$
+^SIGNAL=0$
+--
+^warning: ignoring
+--
